working through Tony and Mik's suggestions. Discussion still has work to go

--- a/03-SelectionPipeline.Rmd
+++ b/03-SelectionPipeline.Rmd
@@ -53,7 +53,7 @@ The "Thrifty genotype hypothesis" was originally hypothesised by @Neel1962, wher
 
 ### Selection in urate and gout
 
-The benefits of urate include the its ability to increase blood pressure and it is thought to have helped early hominins to stand upright [@Watanabe2002] and increase blood flow to the brain. Serum urate is also a potent anti-oxidant which accounts for >50% of the anti-oxidant activity of the blood [@Glantzounis2005; @Parmar2009]. Mono-sodium urate crystals that form in conditions of elevated urate are a potent adjuvant for the immune system and enhance the immune response, providing a protective effect against cancer due to the turnover of cells [@Ames1981]. Uric acid has also been identified as being an important part of the malarial response, contributing to cytokine secretion and response of dendritic and T-cells [@GallegoDelgado2014].
+The benefits of urate include the its ability to increase blood pressure and it is thought to have helped early hominins to stand upright [@Watanabe2002] and increase blood flow to the brain. Serum urate is also a potent anti-oxidant which accounts for >50% of the anti-oxidant activity of the blood [@Glantzounis2005; @Parmar2009]. Mono-sodium urate crystals that form in conditions of elevated urate are a potent adjuvant for the immune system and enhances the immune response [@Ames1981; @Optiz2009]. Uric acid has also been identified as being an important part of the malarial response, contributing to cytokine secretion and response of dendritic and T-cells [@GallegoDelgado2014].
 
 <!-- - Possible reasons for the loss @Alvares-Lario2010 -->
 <!--     - urate helps raise bp, this would have been beneficial in low salt environments, helped early hominins stand @Wantannabe? -->
@@ -115,8 +115,8 @@ Bigman2010 has a custom Tajima's D that is created to be similar to iHS in terms
 
 The objectives of this chapter are to:
 
-- Investigate regions that are under selection in Polynesian populations;
-- Investigate regions previously associated with urate, \gls{t2d}, obesity, kidney disease, and metabolic syndrome for signatures of selection
+- Investigate regions that are under selection in Polynesian populations.
+- Investigate regions previously associated with urate, \gls{t2d}, obesity, kidney disease, and metabolic syndrome for signatures of selection.
 
 ## Methods
 
@@ -259,12 +259,12 @@ fdr_low_tab %>%
   kableExtra::footnote("Percentile is the more conservative FDR quantile bin of the permuted data that was equivalent to either the 1st (lower tail) or 99th (upper tail) percentile in the observed data.", general_title = "", threeparttable = TRUE )
 ```
 
-In order to control for false positives, the empirical \gls{fdr} was calculated for \gls{td}, \gls{flf}, \gls{fwh}, and \gls{ze}. To calculate the \gls{fdr}, 5000 permutations of the genotype data were performed, each randomly shuffling the genotypes of markers by marker position (i.e. shuffling rows only). This process re-defined the marker composition of each window, requiring new selection statistics to be calculated for each window. This procedure therefore, generated a new distribution for values of each selection statistic (per permutation) under the null hypothesis of no association between marker genotype and genomic position. For each permutation, for each statistic, the values for quantile 'bins' were calculated for both tails of the distribution. The 'bins' ranged from 0.01 to 0.1% in 0.01 increments, 0.1 to 1% in 0.1% increments, 1 to 5% in 1% increments, and 10%. The median and 95% confidence intervals were calculated for the values of the quantile 'bins' across the permutations (i.e., the median, 2.5^th^ and 97.5^th^ percentiles for the values of the 1^st^ percentile bin from all permutations). The enrichment for each quantile bin was then calculated by comparing the number of windows that were observed in the data compared to the number expected from the permutations. \Gls{fdr} was then estimated by using the value for the 1^st^ or 99^th^ percentile and finding the nearest conservative quantile bin using the median, that was either larger for the lower tail, or smaller for the upper tail and taking the inverse of enrichment for the bin (Table \@ref(tab:fdrpol)). As a result, the estimate will be conservative compared to the true \gls{fdr}, but will still maintain \gls{fdr} control.
+In order to control for false positives, the empirical \gls{fdr} was calculated for \gls{td}, \gls{flf}, \gls{fwh}, and \gls{ze}. To calculate the \gls{fdr}, 5000 permutations of the genotype data were performed, each randomly shuffling the genotypes of markers by marker position (i.e. shuffling rows only). This process re-defined the marker composition of each window, requiring new selection statistics to be calculated for each window. This procedure therefore, generated a new distribution for values of each selection statistic (per permutation) under the null hypothesis of no association between marker genotype and genomic position. A similar method was used by Teshima and colleagues [-@Teshima2006]. For each permutation, for each statistic, the values for quantile 'bins' were calculated for both tails of the distribution. The 'bins' ranged from 0.01 to 0.1% in 0.01 increments, 0.1 to 1% in 0.1% increments, 1 to 5% in 1% increments, and 10%. The median and 95% confidence intervals were calculated for the values of the quantile 'bins' across the permutations (i.e., the median, 2.5^th^ and 97.5^th^ percentiles for the values of the 1^st^ percentile bin from all permutations). The enrichment for each quantile bin was then calculated by comparing the number of windows that were observed in the data compared to the number expected from the permutations. \Gls{fdr} was then estimated by using the value for the 1^st^ or 99^th^ percentile and finding the nearest conservative quantile bin using the median, that was either larger for the lower tail, or smaller for the upper tail and taking the inverse of enrichment for the bin (Table \@ref(tab:fdrpol)). As a result, the estimate will be conservative compared to the true \gls{fdr}, but will still maintain \gls{fdr} control.
 
 The \gls{fdr} for \gls{ze} was 1.0 for all Polynesian populations in the lower end of the distribution and the 1^st^ percentile of the data fell within the 2^nd^ percentile bin from the permutations. This means that the 1^st^ percentile threshold from the observed \gls{ze} fell between the 1^st^ and 2^nd^ percentile of the null distribution, and was entirely within the 95% confidence interval. Whereas, for \gls{td} and \gls{fwh} the maximum quantile bin for the Polynesian populations in the lower tail was `r fdr_low_tab %>%filter(stat %in% c('Tajima.D','Fay.Wu.H')) %>% summarise(max(lowest_quant))`% (\gls{nzm}), with the maximum upper confidence interval being `r fdr_low_tab %>%filter(stat %in% c('Tajima.D','Fay.Wu.H')) %>% summarise(three_dp(max(upperCI)))` (\gls{nzm}). For the purpose of reporting on individual statistics, a threshold of 0.1 was applied, to reduce the expected false positive rate to be less than 1 in 10 on average. \Gls{flf} and \gls{ze} both had an \gls{fdr} above this threshold for the Polynesian populations and will be reported on only as additional evidence when they overlap with other results or were in a region of contiguously depressed score (section \@ref(calcSel)).
 
 
-### Comparison with prior publications
+### Comparison with prior publications {#priorPubs}
 
 
 ```{r priorGenes, include = FALSE}
@@ -3019,8 +3019,11 @@ Urate has a central role in malarial infection and triggering an immune response
 
 _ABO_ was the only gene that had significant markers in all four Polynesian populations out of the malaria-associated genes, and this was only for \gls{ihs}. All of the markers with significant \gls{ihs} in _ABO_ were in favour of the derived allele haplotype. \Gls{cim} had two markers that were significant, the first, rs1053878, was also significant in \gls{ton}. The second marker, rs55764262, was significant in \gls{cim}, \gls{nzm}, and \gls{sam}, and was not in \gls{ld} (\gls{eas} R^2^ = 0.003) with rs549446. Rs549446 was significant in both \gls{chs} and \gls{jpt}. There were no windows from the frequency-based statistics that met the significance threshold. _ABO_ has also been associated with obesity in \gls{gwas} [@comuzzie2012novel]. The marker rs8176741 had been associated with severe malaria [@Timmann2012], however, this marker had a significant \gls{ihs} in \gls{fin} but no other populations. The other \glspl{snp} that showed significance for \gls{ihs} were not in \gls{ld} (\gls{eas} R^2^ = 0.002) with rs55764262, for which \gls{cim}, \gls{nzm} and \gls{sam} all had a significant result. Both \gls{cim} and \gls{ton} had a different marker (rs1053878) that was significant for \gls{ihs} in _ABO_.
 
+\hl{What is the mechanism for ABO to confer resistance/susceptability against malaria}
 
-Both \gls{sam} and \gls{nzm} had \glspl{snp} that were significant for \gls{ihs} in _ATP2B4_, \gls{sam} had rs10494845, and \gls{nzm} had rs142206068, both were in favour of the derived allele haplotype. The malaria-associated variant was rs10900585 [@Timmann2012]. All three variants were not in \gls{ld} with each other (\gls{eas} R^2^ = 0.00).
+Both \gls{sam} and \gls{nzm} had \glspl{snp} that were significant for \gls{ihs} in _ATP2B4_, \gls{sam} had rs10494845, and \gls{nzm} had rs142206068, both were in favour of the derived allele haplotype. The malaria-associated variant was rs10900585 [@Timmann2012]. All three variants were not in \gls{ld} with each other (\gls{eas} R^2^ = 0.00). The\gls{ld} was calculated using the full \gls{1kgp} marker list for \gls{eas} beacause rs10900585 was not on the CoreExome \gls{snp} array. 
+
+\hl{again more info about ATPB4 and malaria}
 
 ```{r}
 # snps from sig_ihs_val, Jallow2009, and Manjurano2015 for DDC locus
@@ -3033,7 +3036,7 @@ rs2329371	0.723	0.531	0.51	0.744	1.0	0.707	0.698
 rs1451375	0.492	0.319	0.611	0.497	0.707	1.0	0.988
 rs1966839	0.49	0.316	0.607	0.495	0.698	0.988	1.0", header = TRUE)
 
-ddc_eas_r2 %>% dplyr::rename(`Rs number` = RS_number) %>% kable(format = 'latex', caption = '(\\#tab:ddcLd) Linkage disequillibrium in EAS populations (R\\textsuperscript{2}) between markers in \\textit{DDC}.', escape = FALSE, booktabs = TRUE) %>% kableExtra::row_spec(0, angle = 90)
+ddc_eas_r2 %>% dplyr::rename(`Rs number` = RS_number) %>% kable(format = 'latex', caption = '(\\#tab:ddcLd) Linkage disequillibrium in EAS populations (R\\textsuperscript{2}) between markers in \\textit{DDC}.', escape = FALSE, booktabs = TRUE) %>% kableExtra::row_spec(0, angle = 90) %>% footnote(general_title = "", general = "LD was calculated in the EAS population of the 1000 Genomes Project using LDlink \\\\citep{Machiela2015}, due to not all markers being present on the CoreExome SNP array.", threeparttable = TRUE, escape=  FALSE)
 ```
 
 (ref:ldDDCnzm) Linkage disequilibrium of \gls{ihs} significant SNPs 
@@ -3108,7 +3111,9 @@ effect of phasing when polynesian populations aren't represented in the 1000 gen
 
 One of the primary objectives of this chapter was to investigate regions that were under selection in Polynesian populations. From the intra-population statistics used, there were between 866 and 974 genes identified in the Polynesian populations that had both intra-population haplotypic and \gls{sfs} statistics that were in the 1^st^ percentile. The regions with possible evidence of selection showed that compared to the other super populations, the Polynesian populations had the fewest genes (111) that only had evidence within the Polynesian super population, whereas the African populations had the largest number of genes (457) that only had evidence in the African super population (Figure \@ref(fig:superUpset)). The Polynesian populations had similar distributions of the \gls{sfs}-based statistics (explored more in Chapter 4).
 
-Pathway analysis on the regions with possible selection in the Polynesian populations revealed that many of the genes that had evidence were involved with various forms of cell signalling, with many related to calcium channels, especially in the Eastern Polynesian populations (sections \@ref(cimPath) and \@ref(nzmPath)). The majority of the pathways that had significant enrichment were from the genes that had markers significant for \gls{nsl}. There was similarity between the pathways of the Eastern Polynesian populations, with many of the pathways in common being cardiac related. These pathways, such as adrenergic signalling in cardio myocytes, calcium signalling pathway, hypertrophic cardiomyopathy, and vascular smooth muscle contraction all had calcium channels as the main set of genes that were selected (sections \@ref(cimPath) and \@ref(nzmPath)). The genes in common with these pathways were _CACNA1D_ (Calcium Voltage-Gated Channel Subunit Alpha1 D) which is associated with blood pressure [@Lu2015], _CACNA2D2_ (Calcium Voltage-Gated Channel Auxiliary Subunit Alpha2delta 2) - also associated with blood pressure [@Warren2017], _CACNA2D3_ (Calcium Voltage-Gated Channel Auxiliary Subunit Alpha2delta 3) - has an association with gout [@Lai2012] but has not been replicated in other studies, and _SLC8A1_ (Solute Carrier Family 8 Member A1) which is associated with cardiac electrical activity time intervals [@Arking2014].
+Pathway analysis on the regions with possible selection in the Polynesian populations revealed that many of the genes that had evidence were involved with various forms of cell signalling, with many related to calcium channels, especially in the Eastern Polynesian populations (sections \@ref(cimPath) and \@ref(nzmPath)). The majority of the pathways that had significant enrichment were from the genes that had markers significant for \gls{nsl}. There was similarity between the pathways of the Eastern Polynesian populations, with many of the pathways in common being cardiac related. These pathways, such as adrenergic signalling in cardio myocytes, calcium signalling pathway, hypertrophic cardiomyopathy, and vascular smooth muscle contraction all had calcium channels as the main set of genes that were selected (sections \@ref(cimPath) and \@ref(nzmPath)). The genes in common with these pathways were _CACNA1D_ (Calcium Voltage-Gated Channel Subunit Alpha1 D) which is associated with blood pressure [@Lu2015], _CACNA2D2_ (Calcium Voltage-Gated Channel Auxiliary Subunit Alpha2delta 2) - also associated with blood pressure [@Warren2017], _CACNA2D3_ (Calcium Voltage-Gated Channel Auxiliary Subunit Alpha2delta 3) - has an association with gout [@Lai2012] but has not been replicated in other studies, and _SLC8A1_ (Solute Carrier Family 8 Member A1) which is associated with cardiac electrical activity time intervals [@Arking2014]. There was an association with gout in the Polynesian \gls{gwas} performed in chapter 5 with _CACNA2D3_ (rs6793459, OR 0.79 95% CI [0.68-0.90], P = 7x10^-4^), however it was not genome-wide significant, and this \gls{snp} was not in \gls{ld} with any of the significant \gls{ihs} or \gls{nsl} markers.
+
+<!--_CACNA2D3_ poly gout rs6793459 OR 0.7863 95% [0.6843-0.9036], P = 0.0006993 -->
 
 In the Western Polynesian populations the only pathway that was in common between \gls{sam} and \gls{ton} was ABC transporters. There was only one gene in the ABC transporters pathway that had an association with urate and gout from the \gls{gwas} catalog. The gene was _ABCG2_, which has a strong effect for gout in Western Polynesian populations [@Phipps-Green2010] and also had haplotypic evidence in \gls{ton} with \gls{ihs}. One of the other genes in this pathway was _ABCC4_ which recently had Western Polynesian specific variants, such as rs972711951, identified and associated with gout [@Tanner2017]. There was evidence of selection at _ABCC4_ in \gls{cim}, \gls{nzm}, and \gls{sam} (Table \@ref(tab:ihsnslPolGenes)).
 
@@ -3143,7 +3148,7 @@ cim_nzm_shared_kegg %>% select(-cim) %>% mutate(nzm = str_split(nzm, ";")) %>% s
 
 ### Selection of urate associated genes
 
-The second objective was to investigate regions associated with urate, gout and related co-morbidities for evidence of selection in the Polynesian populations. There was evidence for selection in urate associated loci. However, the evidence did not appear to be specific for urate itself, but for loci that are involved in more general metabolic pathways. The main effect loci identified through \gls{gwas}, _SLC2A9_ and _ABCG2_, had limited evidence of positive selection. _ABCG2_ had a significant marker (rs2622626) with \gls{ihs} and \gls{nsl} and only in \gls{ton} from the Polynesian populations, the only other populations were \gls{gih} and \gls{itu} from the \gls{sas} super population. This marker showing significance however might be due to the gout prevalence of the \gls{ton} sample population which was 54%. The same result is not seen in closest population with the most similar ancestral background, \gls{sam}, where the prevalence of gout in the sample population was much lower at 12%. Although rs2622626 has not previously been associated with gout in East Asian populations [@zhang2016associations], nor did it have an association in the gout \gls{gwas} analysis in chapter 5.
+The second objective was to investigate regions associated with urate, gout and related co-morbidities for evidence of selection in the Polynesian populations. There was evidence for selection in urate associated loci. However, the evidence did not appear to be specific for urate itself, but for loci that are involved in more general metabolic pathways. The main effect loci identified through \gls{gwas}, _SLC2A9_ and _ABCG2_, had limited evidence of positive selection. _ABCG2_ had a significant marker (rs2622626) with \gls{ihs} and \gls{nsl} and only in \gls{ton} from the Polynesian populations, the only other populations were \gls{gih} and \gls{itu} from the \gls{sas} super population. This marker showing significance however might be due to the gout prevalence of the \gls{ton} sample population which was 54%. The same result is not seen in closest population with the most similar ancestral background, \gls{sam}, where the prevalence of gout in the sample population was much lower at 12%. Although rs2622626 has not previously been associated with gout in East Asian populations [@zhang2016associations], nor did it have an association in the Polyesian gout \gls{gwas} analysis in chapter 5 (P > 0.1).
 
 Only _RREB1_ and _IGFR1_ had haplotypic evidence with \gls{xpehh} across multiple other populations. The other gene of note that didn't have haplotypic evidence, but did have multiple windows in the 1^st^ percentile across multiple statistics and all Polynesian populations was _BCAS3._ _BCAS3_ had been previously identified as selected in @Grossman2013. _RREB1_ was also associated with obesity and \gls{t2d} traits. @Zhang2013a had reported a variant nearby to _RREB1_ (rs675209) as having evidence of selection but this particular marker was absent from the CoreExome \gls{snp} array.
 
@@ -3163,7 +3168,7 @@ Other complex diseases in which urate is implicated, such as the neurological, a
 
 ### Thrifty gene hypothesis
 
-There was no evidence of selection in either of the previously identified loci of _PPARGC1A_ and _CREBRF_ in Polynesian populations. The CoreExome \gls{snp} array did not have rs8192678, but it did have rs1873532 which was in high \gls{ld} (\gls{eas} R^2^ = 0.976). The lack of evidence was consistent with the results of @Cadzow2016 for _PPARGC1A_ where there was no indication of selection from frequency- or haplotype-based methods. 
+There was no evidence of selection in either of the previously identified loci of _PPARGC1A_ and _CREBRF_ in Polynesian populations. The CoreExome \gls{snp} array did not have rs8192678 which was the \gls{snp} reported in @Myles2011 (and not replicated in @Cadzow2016) as being a thrifty genotype, but it did have rs1873532 which was in high \gls{ld} (\gls{eas} R^2^ = 0.976). The lack of evidence was consistent with the results of @Cadzow2016 for _PPARGC1A_ where there was no indication of selection from frequency- or haplotype-based methods. 
 
 No selection signal was observed at _CREBRF_ in any of the Polynesian populations that were tested. One reason for this is that the CoreExome \gls{snp} array did not have the specific variants (rs12513649 and rs373863828) reported in @Minster2016. Downstream from _CREBRF_ there was a consistent signal with what had been reported. This was only found in the Western Polynesian populations and the populations of the \gls{eas} super population, so suggests that had the dataset contained the variants then detection would have been possible. However, without the two markers reported in @Minster2016 it was unable to be determined if _CREBRF_ had evidence of selection from the CoreExome data.
 
@@ -3190,6 +3195,12 @@ As discussed in @Gosling2014, the thrifty gene hypothesis in the context of the 
 
 ### Malaria
 
+\hl{XXX malaria is endemic in... and has been around for... other reports of malaria acting as selective pressure...}
+
+\hl{ABO is a blood group locus...potential mechanism}
+
+
+
 Response to infectious challenge is a key mechanism that has been thought of as a selective pressure. Malarial infection provided a possible challenge to which urate may have been subjected to selective pressure, and as such provided a viable candidate due to the involvement of urate with malarial resistance [@GallegoDelgado2014]. There is also evidence of malaria in the prehistory skeletal remains of the western Pacific islands [@buckley2006predators]. Three loci that were associated with malaria and identified from the \gls{gwas} catalog were investigated for having signals of selection. Two genes that had evidence of selection in the Polynesian populations had also been identified as being associated with obesity and \gls{t2d}. _ABO_ and _ATP2B4_ did not have strong evidence, and it came from only \gls{ihs}. _ATP2B4_ encodes a plasma membrane calcium transporter, another calcium related gene with evidence of selection in \gls{nzm}, also sharing similarity with the many of the genes in the pathways from the pathway enrichment, in that they too were calcium channels. _DDC_ on the other hand, which had a nominally genome-wide significant association with malaria, had comparatively strong haplotypic evidence in the Eastern Polynesian populations. \Gls{nzm} had significant \gls{xpehh} results with every other non-Polynesian population and had six significant markers for \gls{ihs}, three of which were in the top 400 most extreme scores. Rs1966839 in _DDC_ was in near perfect \gls{ld} with the malaria associated intronic variant rs1451375 [@jallow2009genome] and the protective allele corresponded with the allele displaying a possible signal of selection.
 
 From the obesity \gls{gwas} associated gene list, there was _ADCY9_, which had a very strong signal for \gls{ihs} for 7 markers in \gls{cim} and 2 markers in \gls{nzm}, that were the only populations with significant \gls{ihs} values. The variant rs10775349 in _ADCY9_ had been associated with malaria in a candidate gene approach but not in \gls{gwas} [@Maiga2013].
@@ -3200,7 +3211,7 @@ From the obesity \gls{gwas} associated gene list, there was _ADCY9_, which had a
 
 ### Study limitations {#chap3limit}
 
-There were some technical limitations of the study that influenced the results obtained. The use of a \gls{snp} array meant that there was an ascertainment bias built into the markers observed [@nielsen2007recent]. The quality control process for the CoreExome \gls{snp} array also has a bias against singletons and low minor allele frequency \glspl{snp} [@Guo2014]. The effect of this was seen in the right shifting of the distributions of the intra-population frequency based statistics of \gls{td}, \gls{flf}, and \gls{ze}, all of which make use of low frequency or singleton variants in their calculations (Tables \@ref(tab:superGlobalSummaryTD), \@ref(tab:superGlobalSummaryFWH), \@ref(tab:superGlobalSummaryFLF), and \@ref(tab:superGlobalSummaryZE)). This shift was not observed in \gls{fwh} which compared the ratio of high frequency derived and ancestral allele variants with the intermediate frequency variants. The shift was seen in \gls{td}, however with the African populations being shifted to the right, such that the first percentile for many was above zero. The intermediate and high frequency variants were over represented compared to the actual situation which will also have had an impact on the haplotypic statistics due to haplotypes that have low-frequency variants being altered. The data and further discussion regarding the statistic distributions can be found in chapter 4 (sections \@ref(tdDist), \@ref(fwhDist), \@ref(flfDist), \@ref(zeDist), and \@ref(chap4limit)). The effect of using \gls{snp} array data and not sequence data, differing markers, marker density, and differing window sizes all contributed to the up-to 65% replication of previously identified regions. For the frequency based statistics there was also only a \gls{fdr} less than 10% in the Polynesian populations for the 1^st^ percentile of \gls{td} and \gls{fwh}. By focussing on regions that had multiple windows or multiple statistics the chance of it being a false positive should be reduced.
+There were some technical limitations of the study that influenced the results obtained. The use of a \gls{snp} array meant that there was an ascertainment bias built into the markers observed [@nielsen2007recent]. The data regarding the statistic distributions can be found in chapter 4 (sections \@ref(tdDist), \@ref(fwhDist), \@ref(flfDist), and \@ref(zeDist). The quality control process for the CoreExome \gls{snp} array also has a bias against singletons and low minor allele frequency \glspl{snp} [@Guo2014]. The effect of this was seen in the right shifting of the distributions of the intra-population frequency based statistics of \gls{td}, \gls{flf}, and \gls{ze}, all of which make use of low frequency or singleton variants in their calculations (Tables \@ref(tab:superGlobalSummaryTD), \@ref(tab:superGlobalSummaryFWH), \@ref(tab:superGlobalSummaryFLF), and \@ref(tab:superGlobalSummaryZE)). This shift was not observed in \gls{fwh} which compared the ratio of high frequency derived and ancestral allele variants with the intermediate frequency variants. The shift was seen in \gls{td}, however with the African populations being shifted to the right, such that the first percentile for many was above zero. The intermediate and high frequency variants were over represented compared to the actual situation which will also have had an impact on the haplotypic statistics due to haplotypes that have low-frequency variants being altered. Further discussion on the distributions can be found in chapter 4, section \@ref(chap4limit). The effect of using \gls{snp} array data and not sequence data, differing markers, marker density, and differing window sizes all contributed to the up-to 65% replication of previously identified regions (section \@ref{priorPubs}). For the frequency based statistics there was also only a \gls{fdr} less than 10% in the Polynesian populations for the 1^st^ percentile of \gls{td} and \gls{fwh}. By focussing on regions that had multiple windows or multiple statistics the chance of it being a false positive should be reduced.
 
 Another technical limitation that affected the haplotypes was phasing. The phasing of the haplotypes for the Polynesian populations made use of the 1000 Genomes Project reference haplotype panel for probabilistic phasing and could not make use of trios. This panel does not contain Polynesian-specific haplotypes and so the phasing would be influenced by this. While the majority of common haplotypes will be represented in this panel, haplotypes that are Polynesian-specific are not, and this introduces incorrect haplotypes. The phasing uncertainty was unable to be taken into account for any of the methods, this will influence the haplotypic methods of selection. 
 
@@ -3212,7 +3223,7 @@ snp_mean_distance = lapply(1:22, function(x){diff(markers %>% filter(chrom == x)
 
 With the adaptation of the selection and neutrality tests into genome-wide usage, specifically the sliding window approach, there was the need to balance the number of segregating sites with the window size [@Pybus2014]. This balance is entirely influenced by \gls{snp} density with whole genome sequence data offering 78 million bi-allelic \glspl{snp} in the 1000 Genomes Project Phase 3. However, the CoreExome \gls{snp} array data had lower density, with a mean of one \gls{snp} per `r snp_mean_distance` bases. This means that window size needs to increase for \gls{snp} array data in order to have the same number of segregating sites. However, as window size increases it also reduces the resolution of the genome and with it the ability to associate a window with particular genomic features.
 
-There was also a higher likelihood of a longer gene being reported as significant due to more windows overlapping the genic region. Not only that, but the window size meant that \glspl{snp} not in the window might not be near the actual window, that is, -45 and +45 kb away from the edge of the defined window in the worst case. This would lead to some difficulty in definitive location. The flip side to this was that it allows for upstream and downstream effects of a \gls{snp} to be incorporated. There was a trade off between \gls{snp} density and window size. There were `r NROW(markers) %>% formatC(., format = 'f', big.mark = ',', digits = 0)` bi-allelic \gls{snp} markers used in this analysis from the CoreExome \gls{snp} array. This was less than the other projects such as the HapMap project, and considerably less than the sequence data that the 1000 Genomes Project used. The marker density may have been able to be improved though the imputation of the missing markers using a haplotype reference panel. Ideally this analysis would have had a higher marker density, however it was decided that it was best to remain unimputed due to both the haplotype uncertainty at the phasing step, and the Polynesian populations not being represented in the haplotype reference panel used for phasing and imputation. An example of why having Polynesian haplotypes represented is important, is the finding of @Minster2016, where the variant (rs373863828) had no appreciable allele frequency outside of Polynesia. Implications from the marker density used are the number of \glspl{snp} per window was lower than in other studies and specifically when looking at the degradation of haplotypes there is the possibility for early truncation due to lack of data.
+There was also a higher likelihood of a longer gene being reported as significant due to more windows overlapping the genic region. Not only that, but because the window size after the statistics were calculated was trimmed to the central 10 kbp, this meant that \glspl{snp} in the calculation window might not be near the actual window used, that is, up to -45 kb to +45 kb away from the edge of the defined window used in the worst case. This would lead to some difficulty in definitive location. The flip side to this was that it allows for upstream and downstream effects of a \gls{snp} to be incorporated. There was a trade off between \gls{snp} density and window size. There were `r NROW(markers) %>% formatC(., format = 'f', big.mark = ',', digits = 0)` bi-allelic \gls{snp} markers used in this analysis from the CoreExome \gls{snp} array. This was less than the other projects such as the HapMap project, and considerably less than the sequence data that the 1000 Genomes Project used. The marker density may have been able to be improved though the imputation of the missing markers using a haplotype reference panel. Ideally this analysis would have had a higher marker density, however it was decided that it was best to remain unimputed due to both the haplotype uncertainty at the phasing step, and the Polynesian populations not being represented in the haplotype reference panel used for phasing and imputation. An example of why having Polynesian haplotypes represented is important, is the finding of @Minster2016, where the variant (rs373863828) had no appreciable allele frequency outside of Polynesia. Implications from the marker density used are the number of \glspl{snp} per window was lower than in other studies and specifically when looking at the degradation of haplotypes there is the possibility for early truncation due to lack of data.
 
 The method itself of using the empirical distribution and selecting the extremes for a statistic to determine the region under selection does have precedence [@voight2006map; @Hider2013; @Jonnalagadda2017], however, this does assume that selection had occurred. The underlying null distribution of the genome is also unknown. It does need to be acknowledged that using the extremes of the distribution is likely to lead to many false positives [@Teshima2006]. This was somewhat mitigated in this study by using the permutations of the actual data to calculate the empirical \gls{fdr}. Having internal replication within super populations also helps to reduce the \gls{fdr}, for the Polynesian populations this consisted of the Eastern and Western Polynesia population pairings.
 
